crates/vox-codegen/tests/snapshots/golden_corpus_ts_smoke_test__golden_corpus_ts_emit_no_panic@ref_syntax.snap
---
source: crates/vox-codegen/tests/golden_corpus_ts_smoke_test.rs
expression: combined
---
=== Button.tsx ===
import React from "react";

export interface ButtonProps {
  label: string;
}

export function Button({ label }: ButtonProps): React.ReactElement {
  return (
    <div className="px-4">
    <button className={["inline-flex", "items-center", "justify-center", "rounded-md", "text-sm", "font-medium", "ring-offset-background", "transition-colors", "focus-visible:outline-none", "focus-visible:ring-2", "focus-visible:ring-ring", "focus-visible:ring-offset-2", "disabled:pointer-events-none", "disabled:opacity-50", "bg-primary", "text-primary-foreground", "hover:bg-primary/90", "h-10", "px-4", "py-2"].filter(Boolean).join(" ")}>
      {label}
    </button>
    </div>
  );
}


=== vox-app-contract.json ===
{
  "schema_version": 2,
  "http_routes": [],
  "server_fns": [],
  "query_fns": [],
  "mutation_fns": [],
  "mcp_tools": [],
  "mcp_resources": [],
  "server_config": {
    "bind_host": "127.0.0.1",
    "default_port": 3000,
    "port_env_var": "VOX_PORT",
    "dev_proxy_env_var": "VOX_SSR_DEV_URL",
    "static_assets_embed_dir": "public/"
  }
}

=== vox-tanstack-query.tsx ===
/**
 * TanStack Query helpers — generated by Vox (`vox-compiler`).
 * Wrap async data (e.g. `vox-client` / `fetch`) with `useVoxServerQuery`.
 */
import { QueryClient, QueryClientProvider, useQuery } from "@tanstack/react-query";
import type { ReactElement, ReactNode } from "react";

export const voxQueryClient = new QueryClient({
  defaultOptions: {
    queries: { staleTime: 30_000 },
  },
});

export function VoxQueryProvider({
  children,
}: Readonly<{ children: ReactNode }>): ReactElement {
  return <QueryClientProvider client={voxQueryClient}>{children}</QueryClientProvider>;
}

/** Narrow mapping: stable `queryKey` + promise `queryFn` (pairs with generated server fns). */
export function useVoxServerQuery<TData>(
  queryKey: readonly unknown[],
  queryFn: () => Promise<TData>,
) {
  return useQuery<TData>({ queryKey, queryFn });
}


=== vox-app.tsx ===
// AUTO-GENERATED by Vox — web app root (flat mount; no routes declared).
// Do not edit; regenerate with `vox build`.
import React from "react";
import { Button } from "./Button";

export function VoxApp(): React.ReactElement {
  return <Button label={""} />;
}


=== runtime-install.ts ===
// AUTO-GENERATED by Vox — browser runtime-global shims (web target).
// Do not edit; regenerate with `vox build`. Side-effect module: importing it
// installs `str`/`len`/`Speech`/`std`/`mobile` on globalThis so emitted code's
// bare references resolve in the browser.

declare global {
  // eslint-disable-next-line no-var
  var str: (x: unknown) => string;
  // eslint-disable-next-line no-var
  var len: (x: unknown) => number;
  // eslint-disable-next-line no-var
  var Speech: { transcribe_microphone: () => SpeechResult | Promise<SpeechResult> };
  // eslint-disable-next-line no-var
  var std: {
    time: { now_ms: () => number };
    crypto: { uuid: () => string; hash_secure: (s: string) => Promise<string> };
    json: { parse: (s: string) => unknown };
    regex: { compile: (p: string) => { _tag: "Ok"; _p0: RegExp } | { _tag: "Error"; _p0: string } };
  };
  // eslint-disable-next-line no-var
  var mobile: { transcribe_microphone: () => SpeechResult | Promise<SpeechResult> };
}

type SpeechResult = { _tag: "Ok"; _p0: string } | { _tag: "Error"; _p0: string };

(globalThis as unknown as { str: typeof globalThis.str }).str = (x: unknown): string => String(x);
(globalThis as unknown as { len: typeof globalThis.len }).len = (x: unknown): number => {
  if (Array.isArray(x)) return x.length;
  if (typeof x === "string") return x.length;
  if (x && typeof x === "object" && "length" in x) return (x as { length: number }).length;
  return 0;
};

// Synchronous SpeechResult when __VOX_TEST_TRANSCRIPT__ is set (e2e injection),
// else the Web Speech API / prompt fallback.
function transcribeMicrophone(): SpeechResult | Promise<SpeechResult> {
  const testTranscript = (globalThis as unknown as { __VOX_TEST_TRANSCRIPT__?: string })
    .__VOX_TEST_TRANSCRIPT__;
  if (typeof testTranscript === "string") {
    return { _tag: "Ok", _p0: testTranscript };
  }
  const SR =
    (window as unknown as { SpeechRecognition?: unknown; webkitSpeechRecognition?: unknown })
      .SpeechRecognition ||
    (window as unknown as { SpeechRecognition?: unknown; webkitSpeechRecognition?: unknown })
      .webkitSpeechRecognition;
  if (typeof SR === "function") {
    return new Promise<SpeechResult>((resolve) => {
      const r = new (SR as new () => {
        continuous: boolean;
        interimResults: boolean;
        lang: string;
        start(): void;
        onresult: (e: { results: ArrayLike<ArrayLike<{ transcript: string }>> }) => void;
        onerror: (e: { error: string }) => void;
      })();
      r.continuous = false;
      r.interimResults = false;
      r.lang = "en-US";
      r.onresult = (e) => {
        const transcript = e.results[0]?.[0]?.transcript ?? "";
        resolve({ _tag: "Ok", _p0: transcript });
      };
      r.onerror = (e) => resolve({ _tag: "Error", _p0: e.error });
      try {
        r.start();
      } catch (e) {
        resolve({ _tag: "Error", _p0: String(e) });
      }
    });
  }
  const text = window.prompt("Voice input (no STT engine available — type instead):");
  if (text) return { _tag: "Ok", _p0: text };
  return { _tag: "Error", _p0: "cancelled" };
}

const speechShim = { transcribe_microphone: transcribeMicrophone };
(globalThis as unknown as { Speech: typeof globalThis.Speech }).Speech = speechShim;
(globalThis as unknown as { mobile: typeof globalThis.mobile }).mobile = speechShim;

(globalThis as unknown as { std: typeof globalThis.std }).std = {
  time: { now_ms: () => Date.now() },
  crypto: {
    uuid: () =>
      typeof crypto !== "undefined" && "randomUUID" in crypto
        ? crypto.randomUUID()
        : `vox-${Date.now()}-${Math.random().toString(36).slice(2, 10)}`,
    hash_secure: async (s: string): Promise<string> => {
      const buf = new TextEncoder().encode(s);
      const digest = await crypto.subtle.digest("SHA-256", buf);
      return Array.from(new Uint8Array(digest))
        .map((b) => b.toString(16).padStart(2, "0"))
        .join("");
    },
  },
  json: { parse: (s: string) => JSON.parse(s) },
  regex: {
    compile: (p: string) => {
      try {
        return { _tag: "Ok" as const, _p0: new RegExp(p) };
      } catch (e) {
        return { _tag: "Error" as const, _p0: String(e) };
      }
    },
  },
};

export {};


=== entry.tsx ===
// AUTO-GENERATED by Vox — web entry point. Do not edit; regenerate with `vox build`.
// Mounts <VoxApp/> to #root. App-specific glue lives in the app-owned
// `src/app-hooks.ts` ({ wrapApp, onBoot }).
import "./runtime-install";
import React from "react";
import ReactDOM from "react-dom/client";
import { VoxApp } from "./vox-app";
import { wrapApp, onBoot } from "./app-hooks";

onBoot();

ReactDOM.createRoot(document.getElementById("root")!).render(
  <React.StrictMode>{wrapApp(<VoxApp />)}</React.StrictMode>,
);


=== app-hooks.tsx ===
// AUTO-GENERATED by Vox — default web app hooks. Wires the generic error
// boundary + PWA service-worker registration so a fresh Vox web app needs no
// hand-written glue. Apps wanting custom behavior override this file in a
// post-build step. entry.tsx imports `{ wrapApp, onBoot }` from here.
import React from "react";
import { ErrorBoundary } from "./vox-error-boundary";
import { registerServiceWorker } from "./vox-sw-register";

export function wrapApp(app: React.ReactElement): React.ReactElement {
  return <ErrorBoundary>{app}</ErrorBoundary>;
}

export function onBoot(): void {
  void registerServiceWorker();
}


=== vox-error-boundary.tsx ===
// AUTO-GENERATED by Vox — generic React error boundary. Do not edit.
import React from "react";

interface Props {
  children?: React.ReactNode;
}
interface State {
  hasError: boolean;
}

export class ErrorBoundary extends React.Component<Props, State> {
  // `props` and `setState` come from `React.Component<Props, State>`. Do NOT
  // re-declare them — a narrowed `setState` signature is incompatible with the
  // base class under the real `@types/react` (TS2416).
  state: State = { hasError: false };

  static getDerivedStateFromError(): State {
    return { hasError: true };
  }

  componentDidCatch(error: Error, info: { componentStack?: string }): void {
    console.error("[vox] uncaught render error:", error, info?.componentStack);
  }

  render(): React.ReactNode {
    if (this.state.hasError) {
      return (
        <div role="alert" style={{ padding: "2rem", textAlign: "center" }}>
          <h2>Something went wrong.</h2>
          <p>The app hit an unexpected error. Reload to continue.</p>
          <button
            onClick={() => {
              this.setState({ hasError: false });
              window.location.reload();
            }}
          >
            Reload
          </button>
        </div>
      );
    }
    return this.props.children;
  }
}


=== vox-sw-register.ts ===
// AUTO-GENERATED by Vox — service-worker registration (PWA). Do not edit.
export async function registerServiceWorker(swPath: string = "/sw.js"): Promise<void> {
  if (typeof navigator !== "undefined" && "serviceWorker" in navigator) {
    try {
      await navigator.serviceWorker.register(swPath);
    } catch (err) {
      console.error("[vox] service worker registration failed:", err);
    }
  }
}
